Actions are now all stored inside the compendium rather than duplicated where needed.

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /RenegadeWizard/zDevDoc.txt
+/RenegadeWizard/TextFile1.txt
